crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__error_group_open.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "error E :a"
---
alder::syntax

  × I was expecting `{` to start this error group
   ╭─[/project/src/main.ald:1:9]
 1 │ error E :a
   · ┬       ┬
   · │       ╰── expected `{`
   · ╰── this error declaration starts here
   ╰────
