crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__error_group_payload_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "error E { :a(Number Number) }"
---
alder::syntax

  × I was expecting `,` or `)` after this tag payload type
   ╭─[/project/src/main.ald:1:21]
 1 │ error E { :a(Number Number) }
   ·             ┬       ┬
   ·             │       ╰── expected `,` or `)`
   ·             ╰── this `(` opens here
   ╰────
