crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__error_group_tag.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "error E { expired }"
---
alder::syntax

  × I was expecting an error tag such as `:failed`
   ╭─[/project/src/main.ald:1:11]
 1 │ error E { expired }
   · ┬         ┬
   · │         ╰── expected `:` followed by a lower-case tag name
   · ╰── this error declaration starts here
   ╰────
