crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__expression_binary_operand.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: let x = 1 +
---
alder::syntax

  × operator `+` is missing its right operand at the end of the file
   ╭─[/project/src/main.ald:1:12]
 1 │ let x = 1 +
   · ┬
   · ╰── this binding starts here
   ╰────
