crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__expression_path_member.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let x = Option::"
---
alder::syntax

  × I was expecting a name after `::` at the end of the file
   ╭─[/project/src/main.ald:1:17]
 1 │ let x = Option::
   · ┬
   · ╰── this binding starts here
   ╰────
