crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__expression_sql_keyword.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let x = query { select * from users where select }"
---
alder::syntax

  × `select` is a query keyword, not a value
   ╭─[/project/src/main.ald:1:43]
 1 │ let x = query { select * from users where select }
   ·                 ┬                         ───┬──
   ·                 │                            ╰── query keyword used as a value
   ·                 ╰── this `select` starts here
   ╰────
